syntax = "proto3";
package model;

import "google/protobuf/timestamp.proto";

enum EventType {
  Unknown = 0;

  // Project
  ProjectCreated = 8812;
  ProjectRenamed = 8489;
  TaskAdded = 1541;
  TaskRemoved = 4982;

  // Task
  TaskImported = 1036;
  TaskCreated = 8694;
  TaskRenamed = 5239;
}

enum AggregateType {
  UnknownAggregate = 0;
  Project = 3756;
  Task = 8068;
}

message Event {
  uint64 ID = 1;
  bytes previousMessageHash = 2;
  bytes aggregateID = 3;
  AggregateType aggregateType = 4;
  google.protobuf.Timestamp timestamp = 5;
  bytes sourceID = 6;
  int32 sourceVersion = 7;

  EventType type = 8;
  bytes payload = 9;

  message ProjectCreated {
    string name = 2825;
    repeated bytes tasks = 9477;
  }

  message TaskRemoved { bytes taskID = 2296; }
  message TaskAdded { bytes taskID = 6339; }
  message ProjectRenamed { string name = 8825; }

  message TaskCreated {
    string name = 3500;
    string emoji = 4282;
  }

  message TaskRenamed {
    string name = 1770;
    string emoji = 1957;
  }
}
